# compiler

./: .gitignore  .merlin  Makefile  README.md  _tags  cli.ml  compiler.opam  runtest.sh  test
githooks/: pre-commit
src/: compiler.ml  lang.ml  lexer.ml  lexer.mll  old_parser.ml  parser.ml  parser.mly
test/: booladd.err  boolfalse.out  div_by_zero.err  divbyzero.err  floatadd.src  floatdiv.src  floatleqfalse.src  floatleqtrue.src  floatmul.src  floatsub.src  if.src  ifnum.err  intleqfalse.src  intleqtrue.src  intsub.out  intsub.src  jbuild  mixedarithmetic.src  nanarithmetic.src  non_function_app.err  normal_cases.lex.out  normal_cases.out  normal_cases.parse.out  normal_cases.src  normal_cases.step.out  normal_cases.type.out  normalcases.lex.out  normalcases.out  test1.expected  test2.expected  type_mismatch1.err  type_mismatch2.err  type_mismatch3.err  type_mismatch4.err  type_mismatch5.err  type_mismatch6.err  type_mismatch7.err  typecheck1.err  typecheck2.err  var_without_val.err
